--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,4 +1,7 @@
 ---
-permalink: /404/
+permalink: /404.html
 ---
-minimalist 404 page
+I love to break things too, but it is important to recognize when
+you are just breaking things for the sake of breaking them. Like
+right now, you are just reading some 404 page. There is nothing 
+exciting to exploit here, move on with your life.
